objects/Cohort__c.object
<CustomObject>
    <description>Links and tracks a group of students through their career in an individual school.</description>
    <fields>
        <fullName>Credits_Required__c</fullName>
        <label>Credits Required to Graduate</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Year__c</fullName>
        <label>Exit Year</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Career Portfolio is required for Cohort Members</description>
        <label>Portfolio Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Graduation_Date__c</fullName>
        <label>Projected Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_Community_Service_Hours__c</fullName>
        <label>Required Community Service Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Cohort</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>